--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "twiogp",
   "author": "sadness_ojisan",
   "keywords": [
-    "gatsby"
+    "next"
   ],
   "scripts": {
     "develop": "next dev",
@@ -13,10 +13,13 @@
     "build": "next build"
   },
   "dependencies": {
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
     "next": "^12.0.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "yaml": "^1.10.2"
+    "yaml": "^1.10.2",
+    "zod": "^3.11.6"
   }
 }
