--- a/package.json
+++ b/package.json
@@ -5,30 +5,21 @@
   "description": "twiogp",
   "author": "sadness_ojisan",
   "keywords": [
-    "gatsby"
+    "next"
   ],
   "scripts": {
-    "develop": "gatsby develop",
-    "start": "gatsby develop",
-    "build": "gatsby build",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "develop": "next dev",
+    "start": "next start",
+    "build": "next build"
   },
   "dependencies": {
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "gatsby": "^4.4.0",
-    "gatsby-plugin-emotion": "^7.4.0",
-    "gatsby-plugin-image": "^2.4.0",
-    "gatsby-plugin-react-helmet": "^5.4.0",
-    "gatsby-plugin-sharp": "^4.4.0",
-    "gatsby-plugin-sitemap": "^5.4.0",
-    "gatsby-plugin-typegen": "^2.2.4",
-    "gatsby-source-filesystem": "^4.4.0",
-    "gatsby-transformer-sharp": "^4.4.0",
-    "gatsby-transformer-yaml": "^4.4.0",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "next": "^12.0.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "yaml": "^1.10.2",
+    "zod": "^3.11.6"
   }
 }
