--- a/package.json
+++ b/package.json
@@ -10,16 +10,32 @@
   "scripts": {
     "develop": "next dev",
     "start": "next start",
-    "build": "next build"
+    "build": "next build",
+    "lint:ci": "eslint 'src/**/*.{js,ts,tsx,jsx,json}'",
+    "lint:fix": "eslint --fix 'src/**/*.{js,ts,tsx,jsx,json}'",
+    "format:ci": "prettier --check 'src/**/*.{js,ts,tsx,jsx,json}'",
+    "format:fix": "prettier --write 'src/**/*.{js,ts,tsx,jsx,json}'",
+    "typecheck:ci": "tsc --noEmit"
   },
   "dependencies": {
-    "@types/react": "^17.0.38",
-    "@types/react-dom": "^17.0.11",
     "next": "^12.0.7",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "yaml": "^1.10.2",
     "zod": "^3.11.6"
+  },
+  "devDependencies": {
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "@typescript-eslint/eslint-plugin": "^5.9.0",
+    "@typescript-eslint/parser": "^5.9.0",
+    "eslint": "^8.6.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-react": "^7.28.0",
+    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-simple-import-sort": "^7.0.0",
+    "prettier": "^2.5.1",
+    "typescript": "^4.5.4"
   }
 }
